# example-mcp-servers

./: .gitignore  README.md
api-key-server/: Justfile  README.md  pyproject.toml
api-key-server/src/api_key_file_server/: files.py  server.py
oauth2-keycloak-dcr-server/: Justfile  README.md  docker-compose.yml  pyproject.toml
oauth2-keycloak-dcr-server/keycloak/: bootstrap-keycloak.sh
oauth2-keycloak-dcr-server/scripts/: get_erato_access_token.sh  register_dynamic_client.sh
oauth2-keycloak-dcr-server/src/oauth2_keycloak_dcr_server/: config.py  files.py  server.py
oidc-id-token-server/: Justfile  README.md  oidc-config.template.toml  pyproject.toml
oidc-id-token-server/scripts/: mint_test_token.py
oidc-id-token-server/src/oidc_id_token_file_server/: config.py  files.py  server.py
